target code added

--- a/product.html
+++ b/product.html
@@ -40,6 +40,7 @@
 						</ul>
 					</div>
 					</li>
+					<a href="product.html" target="_blank">
 					<li><i class="fa fa-cogs" aria-hidden="true"></i> product
 						<div class="sub-menu">
 						<ul>
@@ -49,7 +50,8 @@
 						</ul>
 					</div>
 					
-					</li>					
+					</li>	
+					</a>				
 					<li><i class="fa fa-th" aria-hidden="true"></i>  Blogs 
 						<div class="sub-menu">
 						<ul>
