--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 			<div class="rightmenu">
 				<ul>
 
-					<a href="file:///C:/Users/gautam/Documents/summer%20project/index.html" target="_blank">
+					<a href="index.html" target="_blank">
 					<li><i class="fa fa-home" aria-hidden="true"></i> HOME </li></a>					
 					<li><i class="fa fa-user" aria-hidden="true"></i> Aboust us
 					<div class="sub-menu">
 						<ul>
-							<a href="about.html">
-							<li><i class="fa fa-id-card" aria-hidden="true"></i> intro</li></a>
+							<a href="about.html" target="_blank">
+							<li><i class="fa fa-id-card" aria-hidden="true" target="_blank"></i> intro</li></a>
 							<li><i class="fa fa-eye" aria-hidden="true"></i>  vission</li>
 							<li><i class="fa fa-users" aria-hidden="true"></i>  team</li>
 								</ul>
@@ -34,7 +34,7 @@
 					<li><i class="fa fa-clone" aria-hidden="true"></i> Services 
 					<div class="sub-menu1">
 						<ul>
-							<a href="Services.html">
+							<a href="Services.html" target="_blank">
 							<li><i class="fa fa-truck" aria-hidden="true"></i> Trading</li></a>
 							<li><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Design</li>
 							<li><i class="fa fa-cubes" aria-hidden="true"></i> Develop</li>
@@ -42,7 +42,7 @@
 					</div>
 					</li>
 
-					<a href="product.html">
+					<a href="product.html" target="_blank">
 					<li><i class="fa fa-cogs" aria-hidden="true"></i> product
 					<div class="sub-menu">
 						<ul>
@@ -57,14 +57,14 @@
 					<li><i class="fa fa-th" aria-hidden="true"></i>  Blogs 
 						<div class="sub-menu">
 						<ul>
-							<a href="http://techlearn99.blogspot.com/">
+							<a href="http://techlearn99.blogspot.com/" target="_blank">
 							<li>tech learn</li></a>
-							<a href="https://www.facebook.com/Computer-hacking-tricks-365143563611084/notifications/">
+							<a href="https://www.facebook.com/Computer-hacking-tricks-365143563611084/notifications/" target="_blank">
 							<li>CHT</li></a>							
 								</ul>
 					</div>
 					</li></a>
-					<a href="contact.html">
+					<a href="contact.html" target="_blank">
 					<li><i class="fa fa-address-book-o" aria-hidden="true"></i> contact</li></a>
 				</ul>
 			</div>
