--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
 
 
 
-
+					<a href="product.html" target="_blank">
 					<li><i class="fa fa-cogs" aria-hidden="true"></i> product
 						<div class="sub-menu">
 						<ul>
@@ -53,7 +53,8 @@
 						</ul>
 					</div>
 					
-					</li>					
+					</li>
+					</a>					
 					<li><i class="fa fa-th" aria-hidden="true"></i>  Blogs 
 						<div class="sub-menu">
 						<ul>
