pin code change

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 	<div class="text">Head Office
 	</div>
 	<div class="address">	1005 C akash colony Gali no 4 <br>Ashok Mohallah
-	jama masjid<br> ,Delhi-110006
+	jama masjid<br> ,Delhi-110006336
 
 	Land Mark - Near Surya Public School,Nangloi
 </div>
